data/derived/sp14/progs/unify/prog0535.ml.out
Characters 46-73:
  let (l, r) = additivePersAndRoot(abs(n)) in
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int -> int * int
       but an expression was expected of type 'a * 'b
